[feature/13-update-user-role-endpoint-for-super-admin] super admin or admin can update user role.  Swagger auth updated.
